$Id$

	WARNING !! WARNING !! WARNING !! WARNING !! WARNING !! WARNING !! WARNING !!

	Inbound file handling is changed, this version is under test and should NOT
	be used on production systems

	WARNING !! WARNING !! WARNING !! WARNING !! WARNING !! WARNING !! WARNING !!

	WARNING, users of Sparc and HP-PA systems should be carefull, some
	menus do not work.
	All other users on Intel machines (99,9% I think) can use this version.

v0.37.6		10-Aug-2003

	general:
		Changed all Linux references into GNU/Linux.
		Changed the address of the FSF in all sources.
		Removed memwatch debugger.
		Changed all gif and jpg images to png images.

	mbcico:
		Completly changed the files inbound receive, all files are now
		first stored in a unique per node temporary inbound directory.
		Only after a successfull session all received files are moved
		to the final inbound directory. Hopefully this will solve the
		resync problems.
		The other goodie is that this is more safe on busy multiline
		systems.
		Fixed the binkp escape sequence which is wrong in the FSP.


v0.37.5		12-Jul-2003 - 10-Aug-2003

	upgrade:
		Check settings menu 1.5.21 for maximum allowed logins.

	global:
		Added switches for binkp CRC mode in global and node records.

	common.a:
		Node locking tests for non-stale lockfiles older then 6 hours.
		Added general code for prgram locking.

	mbcico:
		Implemented CRAM rev.4 change in binkp driver.
		Binkp now reports binkp/1.1, if filerequests are allowed.
		Binkp now only sends Wazoo requests if the remote is binkp/1.1
		and file requests are allowed.
		Binkp now sends M_BSY to the remote when the bbs is closed.
		Better logging of BSY and ERR messages.

	mbsebbs:
		Added check for maximum simultaneous logins.
		Removed debug logging for userrecord i/o
		During virusscan of file uploads, the mbtask timeout timer is
		set to one hour to support very long scans.
		Changed logging during user login.
		Fixed bugs in QWK mail upload processing.